--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,54 @@
+.idea/
+# Compiled class file
+*.class
+
+# Html report
+*.html
+
+# Log file
+*.log
+*.iml
+/applog.txt
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Output folders
+test_report/
+test-output/
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+##########################
+## Eclipse
+##########################
+.metadata
+.classpath
+.project
+.settings/
+bin/
+tmp/
+*.tmp
+*.prefs
+*.bak
+*.swp
+*~.nib
+local.properties
+.loadpath
+
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -12,14 +59,6 @@ target/
 *.iml
 *.ipr
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
 
 ### NetBeans ###
 /nbproject/private/
