--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,12 @@
             <artifactId>log4j-api</artifactId>
             <version>2.23.1</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>7.18.1</version>
+        </dependency>
     </dependencies>
-
 
 
 </project>
